--- a/README
+++ b/README
@@ -2,3 +2,11 @@ mkdir ~/Hello-World
 cd ~/Hello-World
 git init
 touch README
+
+git add README
+git commit -m 'first commit'
+
+git remote add origin https://github.com/username/Hello-World.git
+git push origin master
+
+
